# DDOBuildSync

./: .gitignore  13. Kali's Vile Chemist DD HYBRID Melee Caster build.DDOBuild  Aeywin DL.DDOBuild  CLAUDE.md  CMakeLists.txt  Unfading.DDOBuild  Unfading.DDOBuild.backup  Warcrier.DDOBuild.backup  Warin.DDOBuild.backup
cmake/: copy_if_not_exists.cmake
config/: default_config.json
resources/: app.manifest  app.rc
src/: config.cpp  config.h  git_manager.cpp  git_manager.h  main.cpp  main_window.cpp  main_window.h  updater.cpp  updater.h  utils.cpp  utils.h
